Updated book endpoint response and swagger docs
