# docs/swagger.json
@@ -112,7 +112,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/book.CreateBookResponse"
+                            "$ref": "#/definitions/book.UpdateBookResponse"
                         }
                     }
                 }
@@ -155,7 +155,7 @@
             "required": [
                 "author",
                 "isbn",
-                "publishedYear",
+                "published_year",
                 "title"
             ],
             "properties": {
@@ -167,7 +167,7 @@
                     "type": "string",
                     "example": "9780743273565"
                 },
-                "publishedYear": {
+                "published_year": {
                     "type": "integer",
                     "example": 1925
                 },
@@ -184,7 +184,7 @@
                     "type": "string",
                     "example": "F. Scott Fitzgerald"
                 },
-                "createdAt": {
+                "created_at": {
                     "type": "string",
                     "example": "2024-01-01T00:00:00Z"
                 },
@@ -197,7 +197,7 @@
                     "type": "string",
                     "example": "9780743273565"
                 },
-                "publishedYear": {
+                "published_year": {
                     "type": "integer",
                     "example": 1925
                 },
@@ -265,6 +265,36 @@
                 "title": {
                     "type": "string",
                     "example": "The Great Gatsby"
+                }
+            }
+        },
+        "book.UpdateBookResponse": {
+            "type": "object",
+            "properties": {
+                "author": {
+                    "type": "string",
+                    "example": "F. Scott Fitzgerald"
+                },
+                "id": {
+                    "type": "string",
+                    "format": "uuid",
+                    "example": "123e4567-e89b-12d3-a456-426614174000"
+                },
+                "isbn": {
+                    "type": "string",
+                    "example": "9780743273565"
+                },
+                "published_year": {
+                    "type": "integer",
+                    "example": 1925
+                },
+                "title": {
+                    "type": "string",
+                    "example": "The Great Gatsby"
+                },
+                "updated_at": {
+                    "type": "string",
+                    "example": "2024-01-01T00:00:00Z"
                 }
             }
         }
